<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Block IDLE</string>
    <string name="cancel">Cancel</string>
	<string name="class_name_example">Example \: MyClass</string>
	<string name="create">Create</string>
    <string name="create_a_new_project">Create a new project</string>
	<string name="new_java_class">New Java Class</string>
    <string name="package_name">Package Name</string>
    <string name="package_name_example">Example \: com.example.pkg</string>
    <string name="project_configuration">Project Configuration</string>
    <string name="project_name">Project Name</string>
    <string name="project_name_example">Example \: MyProject</string>
    <string name="version_name">Version Name</string>
    <string name="more_options">More Options</string>
</resources>
