<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/new_java_class"
        android:textSize="24sp"
        android:fontFamily="@font/noto_sans_semibold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="Class Name"
        android:layout_marginTop="8dp"
        android:id="@+id/classNameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/className" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="?attr/colorOnSurface"
        android:textSize="12sp"
        android:fontFamily="@font/noto_sans_thin"
        android:text="@string/project_name_example" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/package_name"
        android:layout_marginTop="8dp"
        android:id="@+id/packageNameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/packageName" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="?attr/colorOnSurface"
        android:textSize="12sp"
        android:fontFamily="@font/noto_sans_thin"
        android:text="@string/package_name_example" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
		    android:id="@+id/create"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create" />

        <Button
		    android:id="@+id/cancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
